# python-desktop-distribution

./: .gitignore  CHANGELOG.md  README.md  build.py  launcher.py  main.py  package.py  pyproject.toml  updater.py  version.json
app/: logger.py  update_checker.py
app/locales/: messages.pot
app/locales/ru/LC_MESSAGES/: messages.mo  messages.po
