[project]
name = "learning-pyinstaller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "packaging>=26.0",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
